--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,7 @@
         "ProjectSettings/":true,
         "temp/":true,
         "Temp/":true
-    }
+    },
+    "csharp.format.enable": true,
+    "csharpfixformat.style.braces.onSameLine": false
 }
